# sf-automation-switch

./: .gitignore  DeployToOrg.sh  FetchMetadata.sh  LICENSE.md  OrgInit.sh  README.md  pyproject.toml  requirements.txt
scripts/: DeployToOrg.sh  FetchMetadata.sh  OrgInit.sh
src/: callout_controller.py  clean_up.py  controller.py  disableApexTriggers.py  disableFlows.py  disableValidationRules.py  enableApexTriggers.py  enableFlows.py  enableValidationRules.py  json_util.py  main.py  model.py  models.py  payload_builder.py  schema.py  test_cred.ipynb  xml_util.py
src/Deprecated/: deprecated_disableApexTriggers.py  deprecated_disableFlows.py  deprecated_disableValidationRules.py  deprecated_enableApexTriggers.py  deprecated_enableFlows.py  deprecated_enableValidationRules.py  deprecated_main.py  test.py
